        'App.class_init' instead of 'Globals'.

      - Moved 'ApplicationDefaultPermissions' from 'App.class_init' to
        'AccessControl.Permissions', in order to break an import cycle
        in third-party code which avoids imports from 'Globals.'  Left
        the class importable from its old location without deprecation.

    Bugs Fixed

      - "Permission tab": correct wrong form parameter for
        the user-permission report

      - Launchpad #290254, DateTime/DateTime.py:
        added '__setstate__' to cope with old pickles missing a '_micros'
        attribute;  Python's pickling support was creating a new instance,
        *with* a '_micros' attribute, but not clearing that attribute before
        updating the instance dict with the unpickled state.

      - Launchpad #332168, Shared/DC/RDBMS/Connection.py:
        do not expose DB connection strings through exceptions

      - Launchpad #324876: tighened regex for detecting the charset
        from a meta-equiv header

      - configure script: setting ZOPE_VERS to '2.11'

      - Acquisition wrappers now correctly proxy __iter__.

      - Products.PluginIndexes.PathIndex:  backported doc fixes /
        optimizations from trunk (and ExtendedPathIndex).

      - Updated 'pytz' from '2007f' to '2008i'.

      - Moved svn:externals for 'mechanize', 'ClientPath', and 'pytz' to
        versions managed outside the Zope3 trunk.

      - Launchpad #174705:  ensure that the error info object exposed to a
        'tal:on_error' handler has attributes visible to restricted code.
  
      - Testing.ZopeTestCase: Remove quota argument from DemoStorage calls in
        preparation for ZODB 3.9.

  Zope 2.11.2 (2008/10/24) 

    Bugs Fixed

      - Ensure that response header values cannot embed CRLF pairs, which
        violate the HTTP spec (RFC 2616).

      - Launchpad #282677: fixed implementation of guarded_map and
        provided tests and implementation for guarded_zip (RestrictedPython).
